Implemented Task History and added Test cases for it, and fixed testing